Add codespell, ruff and fixes

--- a/Tutorials/EXAMPLE Finding_links_between_pairs.ipynb
+++ b/Tutorials/EXAMPLE Finding_links_between_pairs.ipynb
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time\n",
-    "import rasterio\n",
+    "import os\n",
+    "import sys\n",
     "\n",
     "import networkx as nx\n",
     "import geopandas as gpd\n",
@@ -45,8 +45,12 @@
     "# Define input data\n",
     "pth = \"./\"\n",
     "# Read in cleaned pickle from earlier analysis and convert to time\n",
-    "G = nx.read_gpickle(os.path.join(pth, 'tutorial_outputs', r'iceland_network_clean.pickle'))\n",
-    "G_time = gn.convert_network_to_time(G, distance_tag = 'length', road_col = 'infra_type', factor = 1000)\n",
+    "G = nx.read_gpickle(\n",
+    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    ")\n",
+    "G_time = gn.convert_network_to_time(\n",
+    "    G, distance_tag=\"length\", road_col=\"infra_type\", factor=1000\n",
+    ")\n",
     "# Define origins and destinations files\n",
     "rek_grid_file = os.path.join(pth, \"tutorial_data\", \"rek_grid.shp\")\n",
     "rek_pop_grid_file = rek_grid_file.replace(\".shp\", \"_pop.shp\")\n",
@@ -64,10 +68,22 @@
    "outputs": [],
    "source": [
     "# calculate the origins and destinations by snapping to the road network\n",
-    "origins_df = gn.pandana_snap_c(G_time, rek_grid, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
-    "origins = list(set(origins_df['NN']))\n",
-    "destinations_df = gn.pandana_snap_c(G_time, in_churches, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
-    "destinations = list(set(destinations_df['NN']))"
+    "origins_df = gn.pandana_snap_c(\n",
+    "    G_time,\n",
+    "    rek_grid,\n",
+    "    source_crs=\"epsg:4326\",\n",
+    "    target_crs=\"epsg:4326\",\n",
+    "    add_dist_to_node_col=True,\n",
+    ")\n",
+    "origins = list(set(origins_df[\"NN\"]))\n",
+    "destinations_df = gn.pandana_snap_c(\n",
+    "    G_time,\n",
+    "    in_churches,\n",
+    "    source_crs=\"epsg:4326\",\n",
+    "    target_crs=\"epsg:4326\",\n",
+    "    add_dist_to_node_col=True,\n",
+    ")\n",
+    "destinations = list(set(destinations_df[\"NN\"]))"
    ]
   },
   {
@@ -161,10 +177,12 @@
     }
    ],
    "source": [
-    "obj_nodes = nx.shortest_path(G_time, source=origins[0], target=destinations[0], weight=\"time\")\n",
+    "obj_nodes = nx.shortest_path(\n",
+    "    G_time, source=origins[0], target=destinations[0], weight=\"time\"\n",
+    ")\n",
     "print(origins[0])\n",
     "print(destinations[0])\n",
-    "obj_nodes # this is a list of the nodes that connected make the shortest path from the origin to the destination"
+    "obj_nodes  # this is a list of the nodes that connected make the shortest path from the origin to the destination"
    ]
   },
   {
@@ -601,14 +619,18 @@
     "oIdx = 0\n",
     "for org in origins:\n",
     "    oIdx = oIdx + 1\n",
-    "    print(f'{oIdx} of {len(origins)}')\n",
+    "    print(f\"{oIdx} of {len(origins)}\")\n",
     "    for dest in destinations:\n",
     "        obj_nodes = nx.shortest_path(G_time, source=org, target=dest, weight=\"time\")\n",
     "        all_edges = []\n",
     "        for idx in range(0, len(obj_nodes) - 1):\n",
     "            start_node = obj_nodes[idx]\n",
     "            end_node = obj_nodes[idx + 1]\n",
-    "            cur_edge = edges_gdf.loc[(edges_gdf['stnode'] == start_node) & (edges_gdf['endnode'] == end_node), 'geometry'].iloc[0]\n",
+    "            cur_edge = edges_gdf.loc[\n",
+    "                (edges_gdf[\"stnode\"] == start_node)\n",
+    "                & (edges_gdf[\"endnode\"] == end_node),\n",
+    "                \"geometry\",\n",
+    "            ].iloc[0]\n",
     "            all_edges.append(cur_edge)\n",
     "            all_connections.append([start_node, end_node, cur_edge])\n",
     "        all_res.append([org, dest, MultiLineString(all_edges)])"
@@ -621,8 +643,8 @@
    "outputs": [],
    "source": [
     "# Write all connections to file\n",
-    "all_results = pd.DataFrame(all_res, columns=['O','D','geometry'])\n",
-    "all_results.to_csv(os.path.join(pth, \"tutorial_data\",\"all_OD_links.csv\"))"
+    "all_results = pd.DataFrame(all_res, columns=[\"O\", \"D\", \"geometry\"])\n",
+    "all_results.to_csv(os.path.join(pth, \"tutorial_data\", \"all_OD_links.csv\"))"
    ]
   },
   {
@@ -632,12 +654,12 @@
    "outputs": [],
    "source": [
     "# Tabulate usage of individual links and write to file\n",
-    "all_conn = pd.DataFrame(all_connections, columns=['start','node','geometry'])\n",
-    "all_connections_count = pd.DataFrame(all_conn.groupby(['start','node']).count())\n",
+    "all_conn = pd.DataFrame(all_connections, columns=[\"start\", \"node\", \"geometry\"])\n",
+    "all_connections_count = pd.DataFrame(all_conn.groupby([\"start\", \"node\"]).count())\n",
     "all_connections_count.reset_index(inplace=True)\n",
-    "all_connections_first = pd.DataFrame(all_conn.groupby(['start','node']).first())\n",
+    "all_connections_first = pd.DataFrame(all_conn.groupby([\"start\", \"node\"]).first())\n",
     "all_connections_first.reset_index(inplace=True)\n",
-    "all_connections_first['count'] = all_connections_count['geometry']"
+    "all_connections_first[\"count\"] = all_connections_count[\"geometry\"]"
    ]
   },
   {
@@ -646,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_connections_first.to_csv(os.path.join(pth, \"tutorial_data\",\"OD_links_usage.csv\"))"
+    "all_connections_first.to_csv(os.path.join(pth, \"tutorial_data\", \"OD_links_usage.csv\"))"
    ]
   },
   {
