--- a/Tutorials/EXAMPLE Fixing your road network.ipynb
+++ b/Tutorials/EXAMPLE Fixing your road network.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
-    "import time\n",
+    "import os\n",
+    "import sys\n",
     "import networkx as nx\n",
     "import osmnx as ox"
    ]
@@ -36,11 +36,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "data_pth = os.path.join(pth, 'tutorial_outputs')\n",
+    "pth = \"./\"  # change this path to your working folder\n",
+    "data_pth = os.path.join(pth, \"tutorial_outputs\")\n",
     "\n",
     "# read back your graph from step 1 from you saved pickle\n",
-    "G = nx.read_gpickle(os.path.join(data_pth, 'iceland_network_clean.pickle'))"
+    "G = nx.read_gpickle(os.path.join(data_pth, \"iceland_network_clean.pickle\"))"
    ]
   },
   {
@@ -50,7 +50,10 @@
    "outputs": [],
    "source": [
     "# note the use of sorted to sort by number of edges\n",
-    "list_of_subgraphs = [G.subgraph(c).copy() for c in sorted(nx.strongly_connected_components(G), key=len, reverse=True)]"
+    "list_of_subgraphs = [\n",
+    "    G.subgraph(c).copy()\n",
+    "    for c in sorted(nx.strongly_connected_components(G), key=len, reverse=True)\n",
+    "]"
    ]
   },
   {
@@ -158,8 +161,8 @@
    ],
    "source": [
     "# plotting functions only work if the graphs have a name and a crs attribute\n",
-    "G_largest.graph['crs'] = 'epsg:32646'\n",
-    "G_largest.graph['name'] = 'Iceland'\n",
+    "G_largest.graph[\"crs\"] = \"epsg:32646\"\n",
+    "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# largest connected subgraph\n",
     "ox.plot_graph(G_largest, fig_width=10, edge_linewidth=1, node_size=7)"
@@ -193,8 +196,8 @@
     }
    ],
    "source": [
-    "G_second_largest.graph['crs'] = 'epsg:32646'\n",
-    "G_second_largest.graph['name'] = 'Iceland'\n",
+    "G_second_largest.graph[\"crs\"] = \"epsg:32646\"\n",
+    "G_second_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# second largest connected subgraph\n",
     "ox.plot_graph(G_second_largest, fig_width=10, edge_linewidth=1, node_size=7)"
@@ -216,7 +219,7 @@
    ],
    "source": [
     "edges_largest = gn.edge_gdf_from_graph(G_largest)\n",
-    "edges_largest.to_csv(os.path.join(data_pth, 'edges_largest.csv'))"
+    "edges_largest.to_csv(os.path.join(data_pth, \"edges_largest.csv\"))"
    ]
   },
   {
@@ -226,7 +229,7 @@
    "outputs": [],
    "source": [
     "edges_second = gn.edge_gdf_from_graph(G_second_largest)\n",
-    "edges_second.to_csv(os.path.join(data_pth, 'edges_second.csv'))"
+    "edges_second.to_csv(os.path.join(data_pth, \"edges_second.csv\"))"
    ]
   },
   {
