--- a/Tutorials/Step 1 - Extract From OSM.ipynb
+++ b/Tutorials/Step 1 - Extract From OSM.ipynb
@@ -23,8 +23,8 @@
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import pandas as pd\n",
-    "import os, sys"
+    "import os\n",
+    "import sys"
    ]
   },
   {
@@ -86,12 +86,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "fil = r'iceland-latest.osm.pbf' # download this file from geofabrik: http://download.geofabrik.de/europe/iceland.html. \n",
+    "pth = \"./\"  # change this path to your working folder\n",
+    "fil = r\"iceland-latest.osm.pbf\"  # download this file from geofabrik: http://download.geofabrik.de/europe/iceland.html.\n",
     "\n",
-    "# be sure to place the .osm.pbf file in the 'tutorial data' folder. \n",
+    "# be sure to place the .osm.pbf file in the 'tutorial data' folder.\n",
     "\n",
-    "f = os.path.join(pth, 'tutorial_data', fil)"
+    "f = os.path.join(pth, \"tutorial_data\", fil)"
    ]
   },
   {
@@ -299,7 +299,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accepted_road_types = ['residential', 'unclassified', 'track','service','tertiary','road','secondary','primary','trunk','primary_link','trunk_link','tertiary_link','secondary_link']"
+    "accepted_road_types = [\n",
+    "    \"residential\",\n",
+    "    \"unclassified\",\n",
+    "    \"track\",\n",
+    "    \"service\",\n",
+    "    \"tertiary\",\n",
+    "    \"road\",\n",
+    "    \"secondary\",\n",
+    "    \"primary\",\n",
+    "    \"trunk\",\n",
+    "    \"primary_link\",\n",
+    "    \"trunk_link\",\n",
+    "    \"tertiary_link\",\n",
+    "    \"secondary_link\",\n",
+    "]"
    ]
   },
   {
@@ -315,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iceland.filterRoads(acceptedRoads = accepted_road_types)"
+    "iceland.filterRoads(acceptedRoads=accepted_road_types)"
    ]
   },
   {
@@ -373,8 +387,8 @@
     }
    ],
    "source": [
-    "clip_shp = gpd.read_file(os.path.join(pth, 'tutorial_data', 'rek2.shp'))\n",
-    "clip_shp = clip_shp.to_crs({'init':'epsg:4326'})\n",
+    "clip_shp = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"rek2.shp\"))\n",
+    "clip_shp = clip_shp.to_crs({\"init\": \"epsg:4326\"})\n",
     "clip_shp_obj = clip_shp.geometry.iloc[0]"
    ]
   },
@@ -478,7 +492,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iceland.roads_raw = iceland.roads_raw.loc[iceland.roads_raw.geometry.intersects(clip_shp_obj) == True]"
+    "iceland.roads_raw = iceland.roads_raw.loc[\n",
+    "    iceland.roads_raw.geometry.intersects(clip_shp_obj) == True\n",
+    "]"
    ]
   },
   {
@@ -503,7 +519,7 @@
     }
    ],
    "source": [
-    "iceland.generateRoadsGDF(verbose = False)"
+    "iceland.generateRoadsGDF(verbose=False)"
    ]
   },
   {
@@ -564,7 +580,7 @@
     }
    ],
    "source": [
-    "gn.save(iceland.network,'iceland_unclean',os.path.join(pth, 'tutorial_outputs'))"
+    "gn.save(iceland.network, \"iceland_unclean\", os.path.join(pth, \"tutorial_outputs\"))"
    ]
   },
   {
