--- a/Tutorials/Step 2 - Clean Network.ipynb
+++ b/Tutorials/Step 2 - Clean Network.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
+    "import os\n",
+    "import sys\n",
     "import time\n",
     "import networkx as nx"
    ]
@@ -39,11 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "data_pth = os.path.join(pth, 'tutorial_outputs')\n",
+    "pth = \"./\"  # change this path to your working folder\n",
+    "data_pth = os.path.join(pth, \"tutorial_outputs\")\n",
     "\n",
     "# read back your graph from step 1 from you saved pickle\n",
-    "G = nx.read_gpickle(os.path.join(data_pth, 'iceland_unclean.pickle'))"
+    "G = nx.read_gpickle(os.path.join(data_pth, \"iceland_unclean.pickle\"))"
    ]
   },
   {
@@ -118,9 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iceland_UTMZ = {'init': 'epsg:32627'}\n",
+    "Iceland_UTMZ = {\"init\": \"epsg:32627\"}\n",
     "\n",
-    "WGS = {'init': 'epsg:4326'} # do not adjust. OSM natively comes in ESPG 4326"
+    "WGS = {\"init\": \"epsg:4326\"}  # do not adjust. OSM natively comes in ESPG 4326"
    ]
   },
   {
@@ -173,13 +174,15 @@
     }
    ],
    "source": [
-    "print('start: %s\\n' % time.ctime())\n",
-    "G_clean = gn.clean_network(G, UTM = Iceland_UTMZ, WGS = {'init': 'epsg:4326'}, junctdist = 10, verbose = False)\n",
+    "print(\"start: %s\\n\" % time.ctime())\n",
+    "G_clean = gn.clean_network(\n",
+    "    G, UTM=Iceland_UTMZ, WGS={\"init\": \"epsg:4326\"}, junctdist=10, verbose=False\n",
+    ")\n",
     "\n",
     "# using verbose = True:\n",
     "# G_clean = gn.clean_network(G, wpath = data_pth, output_file_name = 'iceland_network', UTM = Iceland_UTMZ, WGS = {'init': 'epsg:4326'}, junctdist = 10, verbose = True)\n",
-    "print('\\nend: %s' % time.ctime())\n",
-    "print('\\n--- processing complete')"
+    "print(\"\\nend: %s\" % time.ctime())\n",
+    "print(\"\\n--- processing complete\")"
    ]
   },
   {
@@ -231,7 +234,9 @@
     "# Identify only the largest graph\n",
     "\n",
     "# compatible with NetworkX 2.4\n",
-    "list_of_subgraphs = list(G_clean.subgraph(c).copy() for c in nx.strongly_connected_components(G_clean))\n",
+    "list_of_subgraphs = list(\n",
+    "    G_clean.subgraph(c).copy() for c in nx.strongly_connected_components(G_clean)\n",
+    ")\n",
     "max_graph = None\n",
     "max_edges = 0\n",
     "for i in list_of_subgraphs:\n",
@@ -381,8 +386,8 @@
    ],
    "source": [
     "# plotting functions only work if the graphs have a name and a crs attribute\n",
-    "G.graph['crs'] = 'epsg:32646'\n",
-    "G.graph['name'] = 'Iceland'\n",
+    "G.graph[\"crs\"] = \"epsg:32646\"\n",
+    "G.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# original graph\n",
     "ox.plot_graph(G, fig_width=10, edge_linewidth=1, node_size=7)"
@@ -416,8 +421,8 @@
     }
    ],
    "source": [
-    "G_clean.graph['crs'] = 'epsg:32646'\n",
-    "G_clean.graph['name'] = 'Iceland'\n",
+    "G_clean.graph[\"crs\"] = \"epsg:32646\"\n",
+    "G_clean.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# cleaned graph\n",
     "ox.plot_graph(G_clean, fig_width=10, edge_linewidth=1, node_size=7)"
@@ -451,8 +456,8 @@
     }
    ],
    "source": [
-    "G_largest.graph['crs'] = 'epsg:32646'\n",
-    "G_largest.graph['name'] = 'Iceland'\n",
+    "G_largest.graph[\"crs\"] = \"epsg:32646\"\n",
+    "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# largest subgraph\n",
     "ox.plot_graph(G_largest, fig_width=10, edge_linewidth=1, node_size=7)"
