--- a/Tutorials/Step 3 - Using your Graph.ipynb
+++ b/Tutorials/Step 3 - Using your Graph.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys\n",
-    "import time\n",
+    "import os\n",
+    "import sys\n",
     "import networkx as nx\n",
     "import geopandas as gpd\n",
     "import pandas as pd"
@@ -67,8 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "G = nx.read_gpickle(os.path.join(pth, 'tutorial_outputs', r'iceland_network_clean.pickle'))"
+    "pth = \"./\"  # change this path to your working folder\n",
+    "G = nx.read_gpickle(\n",
+    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    ")"
    ]
   },
   {
@@ -112,7 +114,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_time = gn.convert_network_to_time(G, distance_tag = 'length', road_col = 'infra_type', factor = 1000)"
+    "G_time = gn.convert_network_to_time(\n",
+    "    G, distance_tag=\"length\", road_col=\"infra_type\", factor=1000\n",
+    ")"
    ]
   },
   {
@@ -180,10 +184,13 @@
     }
    ],
    "source": [
-    "A = list(G_time.nodes)[0] # first node in list\n",
-    "B = list(G_time.nodes)[10] # 10th node in list\n",
-    "travel_time = nx.shortest_path_length(G_time, A, B, weight = 'time')\n",
-    "print('The travel time between A and B is: %d seconds, or %d minutes!' % (travel_time, travel_time / 60))"
+    "A = list(G_time.nodes)[0]  # first node in list\n",
+    "B = list(G_time.nodes)[10]  # 10th node in list\n",
+    "travel_time = nx.shortest_path_length(G_time, A, B, weight=\"time\")\n",
+    "print(\n",
+    "    \"The travel time between A and B is: %d seconds, or %d minutes!\"\n",
+    "    % (travel_time, travel_time / 60)\n",
+    ")"
    ]
   },
   {
@@ -201,8 +208,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rek = gpd.read_file(os.path.join(pth, 'tutorial_data', 'rek2.shp'))\n",
-    "rek = rek.to_crs('epsg:4326')"
+    "rek = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"rek2.shp\"))\n",
+    "rek = rek.to_crs(\"epsg:4326\")"
    ]
   },
   {
@@ -264,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "churches = gpd.read_file(os.path.join(pth, 'tutorial_data', 'churches.shp'))\n",
+    "churches = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"churches.shp\"))\n",
     "churches = churches.loc[churches.within(poly)]"
    ]
   },
@@ -445,7 +452,7 @@
     }
    ],
    "source": [
-    "#the crs of churchs\n",
+    "# the crs of churchs\n",
     "churches.crs"
    ]
   },
@@ -455,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#view the pandana_snap doc string\n",
+    "# view the pandana_snap doc string\n",
     "gn.pandana_snap?"
    ]
   },
@@ -472,7 +479,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "churches = gn.pandana_snap_c(G_time, churches, source_crs = 'epsg:4326', target_crs = 'epsg:32627', add_dist_to_node_col = True)"
+    "churches = gn.pandana_snap_c(\n",
+    "    G_time,\n",
+    "    churches,\n",
+    "    source_crs=\"epsg:4326\",\n",
+    "    target_crs=\"epsg:32627\",\n",
+    "    add_dist_to_node_col=True,\n",
+    ")"
    ]
   },
   {
@@ -738,7 +751,9 @@
     }
    ],
    "source": [
-    "mini_gdf = gpd.GeoDataFrame({'geometry':my_house}, crs = {'init':'epsg:4326'}, geometry = 'geometry', index = [1])"
+    "mini_gdf = gpd.GeoDataFrame(\n",
+    "    {\"geometry\": my_house}, crs={\"init\": \"epsg:4326\"}, geometry=\"geometry\", index=[1]\n",
+    ")"
    ]
   },
   {
@@ -799,7 +814,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin_gdf = gn.pandana_snap_c(G_time, mini_gdf, source_crs = 'epsg:4326', target_crs = 'epsg:32627')"
+    "origin_gdf = gn.pandana_snap_c(\n",
+    "    G_time, mini_gdf, source_crs=\"epsg:4326\", target_crs=\"epsg:32627\"\n",
+    ")"
    ]
   },
   {
@@ -901,7 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OD = gn.calculate_OD(G_time, origin, destinations, fail_value = 9999999)"
+    "OD = gn.calculate_OD(G_time, origin, destinations, fail_value=9999999)"
    ]
   },
   {
@@ -946,7 +963,7 @@
    "outputs": [],
    "source": [
     "OD = OD / 60\n",
-    "OD_df = pd.DataFrame(OD, columns = destinations, index = origin)"
+    "OD_df = pd.DataFrame(OD, columns=destinations, index=origin)"
    ]
   },
   {
