--- a/Tutorials/EXAMPLE Gravity Calculations.ipynb
+++ b/Tutorials/EXAMPLE Gravity Calculations.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, sys, time\n",
+    "import os\n",
+    "import sys\n",
     "import rasterio\n",
     "\n",
     "import networkx as nx\n",
@@ -34,8 +35,12 @@
     "# Define input data\n",
     "pth = \"./\"\n",
     "# Read in cleaned pickle from earlier analysis and convert to time\n",
-    "G = nx.read_gpickle(os.path.join(pth, 'tutorial_outputs', r'iceland_network_clean.pickle'))\n",
-    "G_time = gn.convert_network_to_time(G, distance_tag = 'length', road_col = 'infra_type', factor = 1000)\n",
+    "G = nx.read_gpickle(\n",
+    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    ")\n",
+    "G_time = gn.convert_network_to_time(\n",
+    "    G, distance_tag=\"length\", road_col=\"infra_type\", factor=1000\n",
+    ")\n",
     "# Define origins and destinations\n",
     "rek_grid_file = os.path.join(pth, \"tutorial_data\", \"rek_grid.shp\")\n",
     "rek_pop_grid_file = rek_grid_file.replace(\".shp\", \"_pop.shp\")\n",
@@ -67,14 +72,14 @@
     "if not os.path.exists(rek_pop_grid_file):\n",
     "    population_data = \"R:\\GLOBAL\\POP&DEMO\\LandScan_2012\\lspop2012.tif\"\n",
     "\n",
-    "    in_grid = gpd.read_file(rek_grid_file)    \n",
+    "    in_grid = gpd.read_file(rek_grid_file)\n",
     "    in_pop = rasterio.open(population_data)\n",
     "    in_grid = in_grid.to_crs(in_pop.crs)\n",
     "\n",
-    "    geoms = ([x.x, x.y] for x in in_grid['geometry'])\n",
+    "    geoms = ([x.x, x.y] for x in in_grid[\"geometry\"])\n",
     "    vals = in_pop.sample(geoms)\n",
-    "    in_grid['Pop'] = [x[0]+1 for x in vals]\n",
-    "    \n",
+    "    in_grid[\"Pop\"] = [x[0] + 1 for x in vals]\n",
+    "\n",
     "    in_grid.to_file(rek_pop_grid_file)"
    ]
   },
@@ -93,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read in the input \n",
+    "# Read in the input\n",
     "rek_grid = gpd.read_file(rek_pop_grid_file)\n",
     "in_churches = gpd.read_file(churches_file)\n",
     "in_churches = in_churches.to_crs(rek_grid.crs)"
@@ -106,10 +111,22 @@
    "outputs": [],
    "source": [
     "# calculate the origins and destinations by snapping to the road network\n",
-    "origins_df = gn.pandana_snap_c(G_time, rek_grid, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
-    "origins = list(set(origins_df['NN']))\n",
-    "destinations_df = gn.pandana_snap_c(G_time, in_churches, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
-    "destinations = list(set(destinations_df['NN']))"
+    "origins_df = gn.pandana_snap_c(\n",
+    "    G_time,\n",
+    "    rek_grid,\n",
+    "    source_crs=\"epsg:4326\",\n",
+    "    target_crs=\"epsg:4326\",\n",
+    "    add_dist_to_node_col=True,\n",
+    ")\n",
+    "origins = list(set(origins_df[\"NN\"]))\n",
+    "destinations_df = gn.pandana_snap_c(\n",
+    "    G_time,\n",
+    "    in_churches,\n",
+    "    source_crs=\"epsg:4326\",\n",
+    "    target_crs=\"epsg:4326\",\n",
+    "    add_dist_to_node_col=True,\n",
+    ")\n",
+    "destinations = list(set(destinations_df[\"NN\"]))"
    ]
   },
   {
@@ -118,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OD = gn.calculate_OD(G_time, origins, destinations, fail_value = 9999999)"
+    "OD = gn.calculate_OD(G_time, origins, destinations, fail_value=9999999)"
    ]
   },
   {
@@ -129,9 +146,12 @@
    "source": [
     "# The calculate_od_raw contains functions for performing OD and gravity calculations\n",
     "import GOSTnets.calculate_od_raw as calcOD\n",
+    "\n",
     "# For this calculation the origins are all weighted equally with a value of 1\n",
-    "gravity = calcOD.calculate_gravity(OD, oWeight=[1] * OD.shape[0], dWeight = destinations_df['Pop'])\n",
-    "gravity['NN'] = origins"
+    "gravity = calcOD.calculate_gravity(\n",
+    "    OD, oWeight=[1] * OD.shape[0], dWeight=destinations_df[\"Pop\"]\n",
+    ")\n",
+    "gravity[\"NN\"] = origins"
    ]
   },
   {
@@ -152,10 +172,12 @@
    "outputs": [],
    "source": [
     "# Now let's introduce the population numbers into the origins\n",
-    "origins = origins_df['NN']\n",
-    "destinations = destinations_df['NN']\n",
-    "OD = gn.calculate_OD(G_time, origins, destinations, fail_value = 9999999)\n",
-    "gravity = calcOD.calculate_gravity(OD, oWeight=origins_df['Pop'], dWeight = destinations_df['Pop'])"
+    "origins = origins_df[\"NN\"]\n",
+    "destinations = destinations_df[\"NN\"]\n",
+    "OD = gn.calculate_OD(G_time, origins, destinations, fail_value=9999999)\n",
+    "gravity = calcOD.calculate_gravity(\n",
+    "    OD, oWeight=origins_df[\"Pop\"], dWeight=destinations_df[\"Pop\"]\n",
+    ")"
    ]
   },
   {
