--- a/Tutorials/Step 3 - Using your Graph.ipynb
+++ b/Tutorials/Step 3 - Using your Graph.ipynb
@@ -452,7 +452,7 @@
     }
    ],
    "source": [
-    "# the crs of churchs\n",
+    "# the crs of churches\n",
     "churches.crs"
    ]
   },
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, We can calcuate the OD matrix using the GOSTNets calculate_OD function. Bear in mind it takes list objects as inputs:"
+    "Now, We can calculate the OD matrix using the GOSTNets calculate_OD function. Bear in mind it takes list objects as inputs:"
    ]
   },
   {
