revisions to toc and tutorial

--- a/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
+++ b/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Fixing your road network graph\n",
+    "\n",
     "The following notebook showcases some common practices to inspect the quality of your road-network graph, and possibilities to improve it."
    ]
   },
