run step_2, remove deprecations including dict structure for CRS

--- a/Tutorials/Step_1-Extract_From_OSM.ipynb
+++ b/Tutorials/Step_1-Extract_From_OSM.ipynb
@@ -206,7 +206,7 @@
    "outputs": [],
    "source": [
     "clip_shp = gpd.read_file(os.path.join(pth, \"tutorial_data\", \"rek2.shp\"))\n",
-    "clip_shp = clip_shp.to_crs({\"init\": \"epsg:4326\"})\n",
+    "clip_shp = clip_shp.to_crs(\"epsg:4326\")\n",
     "clip_shp_obj = clip_shp.geometry.iloc[0]"
    ]
   },
