--- a/Tutorials/Step_2-Clean_Network.ipynb
+++ b/Tutorials/Step_2-Clean_Network.ipynb
@@ -18,9 +18,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import time\n",
-    "import networkx as nx"
+    "import networkx as nx\n",
+    "import pickle"
    ]
   },
   {
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(\"../\")\n",
+    "# import the GOSTnets library\n",
     "import GOSTnets as gn"
    ]
   },
@@ -44,7 +43,7 @@
     "data_pth = os.path.join(pth, \"tutorial_outputs\")\n",
     "\n",
     "# read back your graph from step 1 from you saved pickle\n",
-    "G = nx.read_gpickle(os.path.join(data_pth, \"iceland_unclean.pickle\"))"
+    "G = pickle.load(open(os.path.join(data_pth, \"iceland_unclean.pickle\"), \"rb\"))"
    ]
   },
   {
@@ -69,7 +68,7 @@
    "outputs": [],
    "source": [
     "# you can also print general graph information with networkx\n",
-    "print(nx.info(G))"
+    "print(G)"
    ]
   },
   {
@@ -95,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Iceland_UTMZ = {\"init\": \"epsg:32627\"}\n",
+    "Iceland_UTMZ = \"epsg:32627\"\n",
     "\n",
-    "WGS = {\"init\": \"epsg:4326\"}  # do not adjust. OSM natively comes in ESPG 4326"
+    "WGS = \"epsg:4326\"  # do not adjust. OSM natively comes in ESPG 4326"
    ]
   },
   {
@@ -116,7 +115,7 @@
    "source": [
     "print(\"start: %s\\n\" % time.ctime())\n",
     "G_clean = gn.clean_network(\n",
-    "    G, UTM=Iceland_UTMZ, WGS={\"init\": \"epsg:4326\"}, junctdist=10, verbose=False\n",
+    "    G, UTM=Iceland_UTMZ, WGS=\"epsg:4326\", junctdist=10, verbose=False\n",
     ")\n",
     "\n",
     "# using verbose = True:\n",
@@ -132,7 +131,7 @@
    "outputs": [],
    "source": [
     "# let's print info on our clean version\n",
-    "print(nx.info(G_clean))"
+    "print(G_clean)"
    ]
   },
   {
@@ -182,7 +181,7 @@
    "outputs": [],
    "source": [
     "# print info about the largest sub-graph\n",
-    "print(nx.info(G_largest))"
+    "print(G_largest)"
    ]
   },
   {
@@ -260,7 +259,7 @@
     "G.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# original graph\n",
-    "ox.plot_graph(G, fig_width=10, edge_linewidth=1, node_size=7)"
+    "ox.plot_graph(G, figsize=(10, 14), edge_linewidth=1, node_size=7)"
    ]
   },
   {
@@ -273,7 +272,7 @@
     "G_clean.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# cleaned graph\n",
-    "ox.plot_graph(G_clean, fig_width=10, edge_linewidth=1, node_size=7)"
+    "ox.plot_graph(G_clean, figsize=(10, 14), edge_linewidth=1, node_size=7)"
    ]
   },
   {
@@ -286,7 +285,7 @@
     "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# largest subgraph\n",
-    "ox.plot_graph(G_largest, fig_width=10, edge_linewidth=1, node_size=7)"
+    "ox.plot_graph(G_largest, figsize=(10, 14), edge_linewidth=1, node_size=7)"
    ]
   }
  ],
