get Step 3 working

--- a/Tutorials/Step_3-Using_your_Graph.ipynb
+++ b/Tutorials/Step_3-Using_your_Graph.ipynb
@@ -28,10 +28,10 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import networkx as nx\n",
     "import geopandas as gpd\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -40,8 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(\"../\")\n",
+    "# import GOSTnet library\n",
     "import GOSTnets as gn"
    ]
   },
@@ -68,8 +67,8 @@
    "outputs": [],
    "source": [
     "pth = \"./\"  # change this path to your working folder\n",
-    "G = nx.read_gpickle(\n",
-    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    "G = pkl.load(\n",
+    "    open(os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\"), \"rb\")\n",
     ")"
    ]
   },
@@ -363,7 +362,7 @@
    "outputs": [],
    "source": [
     "mini_gdf = gpd.GeoDataFrame(\n",
-    "    {\"geometry\": my_house}, crs={\"init\": \"epsg:4326\"}, geometry=\"geometry\", index=[1]\n",
+    "    {\"geometry\": my_house}, crs=\"epsg:4326\", geometry=\"geometry\", index=[1]\n",
     ")"
    ]
   },
