fix examples notebooks

--- a/Tutorials/EXAMPLE_Finding_links_between_pairs.ipynb
+++ b/Tutorials/EXAMPLE_Finding_links_between_pairs.ipynb
@@ -16,8 +16,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "\n",
+    "import pickle as pkl\n",
     "import networkx as nx\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
@@ -31,8 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(\"../\")\n",
+    "# import the GOSTnet library\n",
     "import GOSTnets as gn"
    ]
   },
@@ -45,8 +43,8 @@
     "# Define input data\n",
     "pth = \"./\"\n",
     "# Read in cleaned pickle from earlier analysis and convert to time\n",
-    "G = nx.read_gpickle(\n",
-    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    "G = pkl.load(\n",
+    "    open(os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\"), \"rb\")\n",
     ")\n",
     "G_time = gn.convert_network_to_time(\n",
     "    G, distance_tag=\"length\", road_col=\"infra_type\", factor=1000\n",
@@ -153,7 +151,7 @@
    "source": [
     "# Write all connections to file\n",
     "all_results = pd.DataFrame(all_res, columns=[\"O\", \"D\", \"geometry\"])\n",
-    "all_results.to_csv(os.path.join(pth, \"tutorial_data\", \"all_OD_links.csv\"))"
+    "all_results.to_csv(os.path.join(pth, \"tutorial_outputs\", \"all_OD_links.csv\"))"
    ]
   },
   {
@@ -177,7 +175,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_connections_first.to_csv(os.path.join(pth, \"tutorial_data\", \"OD_links_usage.csv\"))"
+    "all_connections_first.to_csv(\n",
+    "    os.path.join(pth, \"tutorial_outputs\", \"OD_links_usage.csv\")\n",
+    ")"
    ]
   },
   {
