--- a/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
+++ b/Tutorials/EXAMPLE_Fixing_your_road_network.ipynb
@@ -16,9 +16,9 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import networkx as nx\n",
-    "import osmnx as ox"
+    "import osmnx as ox\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(\"../\")\n",
+    "# import the GOSTnets library\n",
     "import GOSTnets as gn"
    ]
   },
@@ -41,8 +40,8 @@
     "pth = \"./\"  # change this path to your working folder\n",
     "data_pth = os.path.join(pth, \"tutorial_outputs\")\n",
     "\n",
-    "# read back your graph from step 1 from you saved pickle\n",
-    "G = nx.read_gpickle(os.path.join(data_pth, \"iceland_network_clean.pickle\"))"
+    "# read back your graph from step 2 from you saved pickle\n",
+    "G = pkl.load(open(os.path.join(data_pth, \"iceland_network_clean.pickle\"), \"rb\"))"
    ]
   },
   {
@@ -64,8 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G_largest = list_of_subgraphs[0]\n",
-    "G_second_largest = list_of_subgraphs[1]"
+    "G_largest = list_of_subgraphs[0]"
    ]
   },
   {
@@ -74,25 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(nx.info(G_largest))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(nx.info(G_second_largest))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(nx.info(list_of_subgraphs[2]))"
+    "print(G_largest)"
    ]
   },
   {
@@ -106,20 +86,7 @@
     "G_largest.graph[\"name\"] = \"Iceland\"\n",
     "\n",
     "# largest connected subgraph\n",
-    "ox.plot_graph(G_largest, fig_width=10, edge_linewidth=1, node_size=7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_second_largest.graph[\"crs\"] = \"epsg:32646\"\n",
-    "G_second_largest.graph[\"name\"] = \"Iceland\"\n",
-    "\n",
-    "# second largest connected subgraph\n",
-    "ox.plot_graph(G_second_largest, fig_width=10, edge_linewidth=1, node_size=7)"
+    "ox.plot_graph(G_largest, figsize=(10, 14), edge_linewidth=1, node_size=7)"
    ]
   },
   {
@@ -130,16 +97,6 @@
    "source": [
     "edges_largest = gn.edge_gdf_from_graph(G_largest)\n",
     "edges_largest.to_csv(os.path.join(data_pth, \"edges_largest.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edges_second = gn.edge_gdf_from_graph(G_second_largest)\n",
-    "edges_second.to_csv(os.path.join(data_pth, \"edges_second.csv\"))"
    ]
   },
   {
