--- a/Tutorials/EXAMPLE_Gravity_Calculations.ipynb
+++ b/Tutorials/EXAMPLE_Gravity_Calculations.ipynb
@@ -7,12 +7,11 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
     "import rasterio\n",
     "\n",
-    "import networkx as nx\n",
     "import geopandas as gpd\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle as pkl"
    ]
   },
   {
@@ -21,8 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(\"../\")\n",
+    "# import the GOSTnets library\n",
     "import GOSTnets as gn"
    ]
   },
@@ -35,8 +33,11 @@
     "# Define input data\n",
     "pth = \"./\"\n",
     "# Read in cleaned pickle from earlier analysis and convert to time\n",
-    "G = nx.read_gpickle(\n",
-    "    os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\")\n",
+    "G = pkl.load(\n",
+    "    open(\n",
+    "        os.path.join(pth, \"tutorial_outputs\", r\"iceland_network_clean.pickle\"),\n",
+    "        \"rb\",\n",
+    "    )\n",
     ")\n",
     "G_time = gn.convert_network_to_time(\n",
     "    G, distance_tag=\"length\", road_col=\"infra_type\", factor=1000\n",
@@ -177,8 +178,14 @@
     "OD = gn.calculate_OD(G_time, origins, destinations, fail_value=9999999)\n",
     "gravity = calcOD.calculate_gravity(\n",
     "    OD, oWeight=origins_df[\"Pop\"], dWeight=destinations_df[\"Pop\"]\n",
-    ")"
+    ")\n",
+    "gravity[\"NN\"] = origins"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
